--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ministerio Josue</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    
+<body class="d-flex justify-content-center align-items-center vh-100 bg-light">
+    <div class="card shadow p-4 text-center" style="width: 20rem;">
+        <h5>Instrumental</h5>
+        <h6 class="card-title">Amamos Tu Presencia</h6>
+        <audio controls class="w-100">
+            <source src="mp3/instrumental/Amamos_Tu_Presencia.mp3" type="audio/mp3">
+            Tu navegador no soporta el elemento de audio.
+        </audio>
+
+        <br>
+        <hr>
+        <h5>Adoración</h5>
+        <h6 class="card-title">Amamos Tu Presencia</h6>
+        <audio controls class="w-100">
+            <source src="mp3/Amamos_Tu_Presencia.mp3" type="audio/mp3">
+            Tu navegador no soporta el elemento de audio.
+        </audio>
+
+        <br>
+        <hr>
+        <h5>Alabanza</h5>
+        <h6 class="card-title">Vamos a cantar</h6>
+        <audio controls class="w-100">
+            <source src="mp3/alabanza/C0035 VAMOS A CANTAR - En Espíritu Y En Verdad (Letra).mp3" type="audio/mp3">
+            Tu navegador no soporta el elemento de audio.
+        </audio>
+
+        <h6 class="card-title">A Danzar</h6>
+        <audio controls class="w-100">
+            <source src="mp3/alabanza/Barak ft. Redimi2 -  A Danzar _ _Video Oficial_ _ Radical Live.mp3" type="audio/mp3">
+            Tu navegador no soporta el elemento de audio.
+        </audio>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
