--- a/mensaje.html
+++ b/mensaje.html
@@ -38,7 +38,13 @@
                 <p><strong>¿Te gustaría decirle a Jehová: 'Sé tú mi prioridad'?</strong></p>
             </div>
             <div class="carousel-item text-center p-5">
-                <p>3. (Dirás) "Es que ya no tengo fuerzas para luchar, siento mi corazón destrozado y me refugio en el alcohol para olvidar las cosas."</p>
+                <p>3. (Dirás) "Pero es que mi cuerpo me lo pide, es una necesidad esta droga para mí."</p>
+                <p><strong>2 Crónicas 20:15</strong></p>
+                <p>"No temáis ni os amedrentéis delante de esta multitud tan grande, porque no es vuestra la guerra, sino de Dios."</p>
+                <p><strong>¿Te gustaría decirle a Jehová: 'Sé tú mi prioridad'?</strong></p>
+            </div>
+            <div class="carousel-item text-center p-5">
+                <p>4. (Dirás) "Es que ya no tengo fuerzas para luchar, siento mi corazón destrozado y me refugio en el alcohol para olvidar las cosas."</p>
                 <p><strong>Mateo 11:28</strong></p>
                 <p>"Venid a mí todos los que estáis trabajados y cargados, y yo os haré descansar."</p>
                 <p><strong>¿Te gustaría decirle a Jehová: 'Sé tú mi prioridad'?</strong></p>
@@ -54,8 +60,8 @@
                 <p>Su padre, al verlo de lejos, corrió a su encuentro, lo abrazó y lo besó.</p>
             </div>
             <div class="carousel-item text-center p-5">
-                <h2>Final de la presentación</h2>
-                <p>Gracias por tu tiempo y reflexión. Que Dios guíe tu vida.</p>
+                <h2>Cancion y luego orar </h2>
+               
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carruselBiblico" data-bs-slide="prev">
