--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Ministerio Josue</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="container  justify-content-center align-items-center vh-100 bg-light">
-   
-    <div class="card shadow p-4 text-center" style="width: 20rem;">
-        <h4 class="text-danger">Ministerio Josue</h4>
+<body class="container p-2 text-center" >
+    <h5 class="text-primary text-danger">Ministerio Josue</h5>
+    <div class=" shadow p-4 text-center" >
+  
         <h5 class="text-primary">Instrumental</h5>
         <h6 class="card-title ">Amamos Tu Presencia</h6>
         <audio controls class="w-100">
