--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ministerio Josue</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="container p-2 text-center">
     <h5 class="text-primary text-danger">Ministerio Josue</h5>
@@ -17,8 +18,8 @@
             Tu navegador no soporta el elemento de audio.
         </audio>
         <div class="d-flex justify-content-center mt-2">
-            <button onclick="play()" class="btn-primary">Play</button> 
-            <button onclick="stop()" class="btn-primary">Stop</button>
+            <button onclick="play()" class="btn btn-primary">Play</button> 
+            <button onclick="stop()" class="btn btn-primary">Stop</button>
         </div>
 
         <br><hr>
