--- a/index.html
+++ b/index.html
@@ -45,54 +45,54 @@
         
         <h6 class="card-title">6. Sé Fuerte</h6>
         <audio controls class="w-100">
-            <source src="mp3/adoracion/Sé Fuerte (Live Set) - Sarai Rivera Feat. @Mielsanmarcos.mp3" type="audio/mp3">
+            <source src="mp3/adoracion/Sé Fuerte (Live Set) - Sarai Rivera Feat. @Mielsanmarcos  I Video Oficial.mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">7. Digno</h6>
         <audio controls class="w-100">
-            <source src="mp3/adoracion/Digno (Worthy) - Elevation Worship.mp3" type="audio/mp3">
+            <source src="mp3/adoracion/Digno (Worthy) - Elevation Worship - Musica Cristiana Con Letra.mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">8. Tú eres todo</h6>
         <audio controls class="w-100">
-            <source src="mp3/adoracion/Tu_eres_todo.mp3" type="audio/mp3">
+            <source src="mp3/adoracion/Y2meta.app - Tú eres todo ~Miel San Marcos (Letra) [Eres Todo Para Mi -Proezas Miel San Marcos] (128 kbps).mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">9. Como el ciervo busca por las aguas</h6>
         <audio controls class="w-100">
-            <source src="mp3/adoracion/Como_el_ciervo.mp3" type="audio/mp3">
+            <source src="mp3/adoracion/Y2meta.app - Como el ciervo busca por las aguas _ Marcos Witt _ Letra (128 kbps).mp3" type="audio/mp3">
         </audio>
         
         <br><hr>
         <h5 class="text-primary">Alabanza</h5>
         <h6 class="card-title">10. Gracias sublime es</h6>
         <audio controls class="w-100">
-            <source src="alabanzaMP3/EEYEV - Gracia Sublime Es.mp3" type="audio/mp3">
+            <source src="alabanzaMP3/En Espiritu Y En Verdad - Te Doy Gloria.mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">11. En espíritu y verdad</h6>
         <audio controls class="w-100">
-            <source src="alabanzaMP3/En Espiritu Y En Verdad.mp3" type="audio/mp3">
+            <source src="alabanzaMP3/En Espiritu Y En Verdad - Te Doy Gloria.mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">12. Vamos a cantar</h6>
         <audio controls class="w-100">
-            <source src="mp3/alabanza/Vamos_a_cantar.mp3" type="audio/mp3">
+            <source src="mp3/alabanza/C0035 VAMOS A CANTAR - En Espíritu Y En Verdad (Letra).mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">13. A Danzar</h6>
         <audio controls class="w-100">
-            <source src="mp3/alabanza/A_Danzar.mp3" type="audio/mp3">
+            <source src="mp3/alabanza/Barak ft. Redimi2 -  A Danzar _ _Video Oficial_ _ Radical Live.mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">14. Admirable</h6>
         <audio controls class="w-100">
-            <source src="mp3/alabanza/Admirable.mp3" type="audio/mp3">
+            <source src="mp3/alabanza/Christine D'Clario (feat. Julio Melgar) - Admirable.mp3" type="audio/mp3">
         </audio>
 
         <h6 class="card-title">15. Sonido de libertad</h6>
         <audio controls class="w-100">
-            <source src="mp3/alabanza/Sonido_de_libertad.mp3" type="audio/mp3">
+            <source src="mp3/alabanza/Y2meta.app - YESHUA EL SONIDO DE LIBERTAD - Video Oficial - Miel San Marcos - (128 kbps).mp3" type="audio/mp3">
         </audio>
     </div>
 
